Refactor: cleanup templated project files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23 FATAL_ERROR)
-project(modern_cpp LANGUAGES CXX VERSION 0.1.0)
+project(chemical_formula_parser LANGUAGES CXX VERSION 0.1.0)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
@@ -31,11 +31,6 @@ if(ENABLE_TESTING)
   add_subdirectory(tests)
 endif()
 
-# === Benchmarks ===
-if(ENABLE_BENCHMARKS)
-  add_subdirectory(benchmarks)
-endif()
-
 # === Developer Tooling (formatters, linters, etc.) ===
 include(Tooling)
 
@@ -44,6 +39,3 @@ include(Coverage)
 
 # === Installation & Export ===
 include(install/InstallConfig)
-
-# === Packaging ===
-include(CPackConfig)
