--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,18 @@
-add_library(${PROJECT_NAME}_library STATIC
+add_library(${PROJECT_NAME} STATIC
   library.cpp
 )
 
-add_library(${PROJECT_NAME}::library ALIAS ${PROJECT_NAME}_library)
+add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
-target_compile_features(${PROJECT_NAME}_library PUBLIC cxx_std_20)
+# Forcing C++20 standard
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
 
-target_include_directories(${PROJECT_NAME}_library
+target_include_directories(${PROJECT_NAME}
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
 
-enable_strict_warnings(${PROJECT_NAME}_library)
-enable_sanitizers(${PROJECT_NAME}_library)
-enable_coverage(${PROJECT_NAME}_library)
+enable_strict_warnings(${PROJECT_NAME})
+enable_sanitizers(${PROJECT_NAME})
+enable_coverage(${PROJECT_NAME})
