Implement Part 1: tokenizer and parser (element + count)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_library(${PROJECT_NAME} STATIC
-  library.cpp
+  token.cpp
+  token_kind.cpp
+  tokenizer.cpp
+  tokenizer_error.cpp
+  parser.cpp
+  parser_error.cpp
 )
 
 add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
