--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,22 +27,10 @@ jobs:
 
       - name: Configure → Build → Test (Coverage)
         env:
-          CCACHE_DIR: ~/.ccache
+          CCACHE_DIR: ${{ github.workspace }}/.ccache
           CMAKE_C_COMPILER_LAUNCHER: ccache
           CMAKE_CXX_COMPILER_LAUNCHER: ccache
         run: cmake --workflow --preset coverage-report
-
-      - name: Cache ccache
-        uses: actions/cache@v3
-        with:
-          path: ~/.ccache
-          key: ${{ runner.os }}-ccache-gcc-Coverage
-
-      - name: Cache build directory
-        uses: actions/cache@v3
-        with:
-          path: build/gcc-Coverage
-          key: ${{ runner.os }}-build-gcc-Coverage
 
       - name: Generate coverage XML
         run: cmake --build --preset gcc-Coverage --target coverage
@@ -53,3 +41,15 @@ jobs:
           files: build/gcc-Coverage/coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
+
+      - name: Cache ccache
+        uses: actions/cache@v3
+        with:
+          path: ${{ github.workspace }}/.ccache
+          key: ${{ runner.os }}-ccache-gcc-Coverage
+
+      - name: Cache build directory
+        uses: actions/cache@v3
+        with:
+          path: build/gcc-Coverage
+          key: ${{ runner.os }}-build-gcc-Coverage
